Bug squash 4
Fixed double archiving, smaller Gizmo tooltips, zoom tooltip on board, board headers style improvements

--- a/gizmos.css
+++ b/gizmos.css
@@ -121,10 +121,26 @@
 #gizmos_board .convert_energy {
 	z-index: 101;
 }
-#gizmos_board .player_name {
-	background-color: #fff;
-	opacity: 0.5;
+#gizmos_board .gizmos_container .player_header {
+	position: absolute;
+	width: 100%;
+}
+#gizmos_board .gizmos_container .player_name {
+	position: absolute;
 	padding: 2px;
+	border-radius:10%;
+    text-shadow: 2px 0 2px #ffffff99, 0 -2px 2px #ffffff99, 0 2px 2px #ffffff99, -2px 0 2px #ffffff99;
+    transform-origin: center;
+}
+#gizmos_board .gizmos_container .archive_header {
+	text-align: center;
+	margin: auto;
+	width:100%;
+	color:#fff;
+    text-shadow: 2px 0 2px #00000099, 0 -2px 2px #00000099, 0 2px 2px #00000099, -2px 0 2px #00000099;
+    transform-origin: center;
+    position: relative;
+    top: 70%;
 }
 #gizmos_board #player_cards {
 	align-items: flex-start;
@@ -392,14 +408,14 @@
     position: absolute;
 }
 .tooltipcard {
-	height: 500px;
-	width: 500px;
+	height: 300px;
+	width: 300px;
 }
 .tooltip_desc {
 	font-size: 24px;
 	text-align: center;
 	margin: auto;
-	width: 480px;
+	width: 280px;
 	padding: 10px;
 }
 
@@ -493,6 +509,31 @@
 	aspect-ratio: 90 / 7;
 	background-size: contain;
     background-repeat: no-repeat;	
+}
+#gizmos_board .track_slot {
+	height: 100%;
+	width: 15.5%;
+	float:left;
+	margin-left:1%;
+	margin-right:1%;
+    cursor: help;
+}
+#gizmos_board .track_archive {
+	height: 100%;
+	width: 10.5%;
+	float:left;
+	margin-left:1%;
+	margin-right:1%;
+	vertical-align: middle;
+    cursor: help;
+}
+.gzs_track_tooltip {
+    background-image: url('img/playerboard.png');
+	width: 572.7px;
+	height: 245px;
+}
+.track_tooltip_archive.gzs_track_tooltip {
+	width: 286.4px;
 }
 #gizmos_board .gizmos_column {
 	float:left;
